@@ -112,6 +112,8 @@ class AppConfig: public QObject, public GUI::Config::ConfigBase
 
         void setAutoHide(bool b);
         bool getAutoHide();
+        void setLanguageSync(bool b);
+        bool getLanguageSync() const;
 #ifndef SYNERGY_ENTERPRISE
         bool activationHasRun() const;
         AppConfig& activationHasRun(bool value);
@@ -200,6 +202,7 @@ protected:
         kServerHostname,
         kTLSCertPath,
         kTLSKeyLength,
+        kLanguageSync
     };
 
         void setScreenName(const QString& s);
@@ -242,6 +245,7 @@ protected:
         int m_LastExpiringWarningTime;
         bool m_ActivationHasRun;
         bool m_MinimizeToTray;
+        bool m_LanguageSync           = false;
 
         bool m_ServerGroupChecked;
         bool m_UseExternalConfig;
